[package]

name = "rusti"
version = "0.0.1"
authors = [ "Murarth <murarth@gmail.com>" ]

[lib]

name = "rusti"
path = "src/rusti/lib.rs"

[[bin]]

name = "rusti"
doc = false
test = false

[dependencies]
env_logger = "0.5"
linefeed = "0.4"
log = "0.4"
tempfile = "3.0"
libloading = "0.5"

[dev-dependencies]
assert_matches = "1.0"
