[package]
authors = ["The Rust Project Developers"]
name = "rustc_trans"
version = "0.0.0"

[lib]
name = "rustc_trans"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
bitflags = "1.0"
flate2 = "1.0"
#jobserver = "0.1.5"
libc = "0.2"
log = "0.4"
num_cpus = "1.0"
rustc_llvm = { path = "../librustc_llvm" }
tempdir = "0.3"

[target."cfg(windows)".dependencies]
cc = "1.0.1"
